# ComfyUI-LCS

./: .gitignore  README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish_action.yml
core/: __init__.py  bilateral.py  calibration.py  color_space.py  defaults.py  diagnostics.py  lcs_data.py  patchify.py  relationships.py  sampling.py  sharpness.py
data/: lcs_bc7957e0.safetensors
nodes/: __init__.py  anchor.py  calibrate.py  intervene.py  observe.py  sharpen.py
web/js/: tone_preset.js
